...

        <TextView
            android:id="@+id/textview_dialog_file_choose_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:labelFor="@id/edittext_dialog_file_choose_folder"
            android:text="@string/label_dialog_file_choose_folder" />

        <TextView
            android:id="@+id/textview_dialog_file_choose_absolute"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/textview_dialog_file_choose_root_padding_top"
            android:text="" />

        <EditText
...

            <TextView
                android:id="@+id/textview_dialog_file_choose_file_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:labelFor="@id/edittext_dialog_file_choose_file"
                android:text="@string/label_dialog_file_choose_file" />

            <EditText
                android:id="@+id/edittext_dialog_file_choose_file"
                style="@style/EditTextTheme"
                android:layout_width="match_parent"
...
                android:layout_height="wrap_content"
                android:text="@string/label_dialog_file_choose_show_files" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/listview_dialog_file_choose_file_entries"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/listview_dialog_file_choose_file_entries_margin"
            android:padding="@dimen/listview_dialog_file_choose_file_entries_padding"
            android:layout_gravity="fill_horizontal"
            android:scrollbars="none" />
...
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_file_choose_ok"
                app:srcCompat="@drawable/icon_ok_selector" />

            <ImageView
                android:id="@+id/imageview_dialog_file_choose_cancel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true"
                android:contentDescription="@string/label_dialog_file_choose_cancel"
...
