<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2026 Alwin Ibba
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~ http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_list_item_file_entry"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="@dimen/layout_list_item_file_entry_margin"
    android:padding="@dimen/layout_list_item_file_entry_padding"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview_list_item_file_entry"
        android:layout_gravity="fill_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/cardview_list_item_file_entry_margin"
        app:cardCornerRadius="@dimen/cardview_list_item_file_entry_corner_radius"
        app:cardBackgroundColor="@color/cardBackgroundColor"
        app:cardElevation="@dimen/cardview_list_item_file_entry_card_elevation">

        <LinearLayout
            android:id="@+id/linearlayout_list_item_file_entry_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/linearlayout_list_item_file_entry_name_margin"
            android:padding="@dimen/linearlayout_list_item_file_entry_name_padding"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imageview_list_item_file_entry_symbol"
                android:layout_width="@dimen/imageview_list_item_file_entry_symbol_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/imageview_list_item_file_entry_symbol_margin"
                android:padding="@dimen/imageview_list_item_file_entry_symbol_padding"
                android:layout_weight="1"
                tools:ignore="ContentDescription" />

            <TextView
                android:id="@+id/textview_list_item_file_entry_name"
                android:layout_width="@dimen/textview_list_item_file_entry_name_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/textview_list_item_file_entry_name_margin"
                android:padding="@dimen/textview_list_item_file_entry_name_padding"
                android:layout_weight="4"
                android:textStyle="normal"
                android:text="" />

            <ImageView
                android:id="@+id/imageview_list_item_file_entry_open"
                android:layout_width="@dimen/imageview_list_item_file_entry_open_width"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/imageview_list_item_file_entry_open_margin"
                android:padding="@dimen/imageview_list_item_file_entry_open_padding"
                android:layout_weight="1"
                android:text="@string/string_open"
                android:contentDescription="@string/string_open"
                app:srcCompat="@drawable/icon_folder_open_selector" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>